@@ -2,6 +2,13 @@
 Datatest Changelog
 ==================
 
+COMING SOON (0.11.0)
+--------------------
+
+* Removed deprecated decorators: skip(), skipIf(), skipUnless() (use
+  unittest.skip(), etc. instead).
+
+
 2020-12-17 (0.10.0)
 -------------------
 
